// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFocusStyles() should return correct JssStyle for custom color 1`] = `
Object {
  "&::-moz-focus-inner": Object {
    "border": "0 !important",
  },
  "&:focus": Object {
    "outlineColor": "red !important",
  },
  "&:focus:not(:focus-visible)": Object {
    "outlineColor": "transparent !important",
  },
  "outline": "transparent solid 1px !important",
  "outlineOffset": "2px !important",
}
`;

exports[`getFocusStyles() should return correct JssStyle for custom offset 1`] = `
Object {
  "&::-moz-focus-inner": Object {
    "border": "0 !important",
  },
  "&:focus": Object {
    "outlineColor": "currentColor !important",
  },
  "&:focus:not(:focus-visible)": Object {
    "outlineColor": "transparent !important",
  },
  "outline": "transparent solid 1px !important",
  "outlineOffset": "1px !important",
}
`;

exports[`getFocusStyles() should return correct default JssStyle 1`] = `
Object {
  "&::-moz-focus-inner": Object {
    "border": "0 !important",
  },
  "&:focus": Object {
    "outlineColor": "currentColor !important",
  },
  "&:focus:not(:focus-visible)": Object {
    "outlineColor": "transparent !important",
  },
  "outline": "transparent solid 1px !important",
  "outlineOffset": "2px !important",
}
`;

exports[`getHoverStyles() should return correct default JssStyle 1`] = `
Object {
  "&:hover": Object {
    "color": "#d5001c !important",
  },
  "transition": "color var(--p-transition-duration, .24s) ease !important",
}
`;
